<?xml version="1.0"?>
<package format="2">
  <name>data_preprocessing</name>
  <version>0.0.0</version>
  <description>The data_preprocessing package</description>


  <maintainer email="zz@todo.todo">zz</maintainer>



  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>livox_ros_driver</build_depend>  


  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>livox_ros_driver</build_export_depend>  

  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>livox_ros_driver</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
